# Cpp-LUA-Template

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/: CMakeLists.txt
lib/lua/: CMakeLists.txt
src/: main.cpp
tests/sol2_beep/: CMakeLists.txt
tests/sol2_boop/: CMakeLists.txt
tests/sol2_print/: CMakeLists.txt
tests/sol2_print_script/: CMakeLists.txt  main.cpp
